fixed whitespace and issue where hooks were executed more than once

--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,7 +1,6 @@
 .page {
     background-color: #000000;
     min-height: 100vh;
-    max-width: 1280px;
     width: 100%;
     margin: auto;
     font-family: Inter, Arial, Helvetica, sans-serif;
